12409 audiohd: variable may be used uninitialized

Change-Id: I907765b1063ddb1d2d76ffe914210424ab2f5f43